# PointCloudNet

./: .gitignore  README.md  graph_learning_test.py  knn_gnn.py  knn_gnn.sh  main.py  main.sh  main_ST.py  main_classification.py  main_melanoma_kfold copy.sh  main_persistence_prediction.py  main_regression.py  pointnet_baseline.py  train.py
archive/: pyproject.toml
archive/config/: main.yaml
archive/config/data/: longcovid.yaml  tcells.yaml
archive/config/experiment/gnn/: melanoma_dense.yaml  melanoma_eps.yaml  mnist_eps.yaml  mnist_knn.yaml  modelnet_eps.yaml  modelnet_knn.yaml
archive/config/experiment/legs/: melanoma_eps.yaml  modelnet.yaml  modelnet_learnt.yaml  tcells_learnt.yaml
archive/config/experiment/mnn/: melanoma_eps.yaml  melanoma_knn.yaml  modelnet_dense.yaml  modelnet_eps.yaml
archive/config/experiment/point_transformer/: melanoma_dense.yaml  tcells.yaml
archive/config/experiment/pointnet++/: melanoma_dense.yaml  tcells.yaml
archive/config/experiment/scattering/: melanoma_eps.yaml  melanoma_knn.yaml  mfn_scat_melanoma_eps.yaml  mfn_scat_melanoma_knn.yaml  mfn_scat_modelnet_dense.yaml  mfn_scat_modelnet_knn.yaml  (+4 more)
archive/config/graph_construct/: knn_lap.yaml  raw.yaml
archive/config/model/: gnn.yaml  mnn.yaml  point_transformer.yaml  pointnet++.yaml  scattering_mfn.yaml
archive/data/: perturb_classif.csv
archive/notebooks/: CD8_perturb_msphate.ipynb  dummy.ipynb  modelnet.ipynb
archive/pcnn/data/: longcovid.py  melanoma.py  mnist.py  scattering_utils.py  tcells.py  utils.py
archive/pcnn/models/: layers.py  legs.py  pcnn.py
(+165 files in other folders)
