[tool.poetry]
name = "pcnn"
version = "0.1.0"
description = ""
authors = ["edebrouwer <edward.debrouwer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
numpy = "^1.25.0"
scikit-learn = "^1.3.0"
torch-geometric = "^2.3.1"
matplotlib = "^3.7.1"
pytorch-lightning = "^2.0.4"
wandb = "^0.15.4"
torchvision = "^0.15.2"
omegaconf = "^2.3.0"
pathos = "^0.3.0"
pandas = "^2.0.3"
ipykernel = "^6.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
